--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,16 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-@mixin center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+@import 'reset.scss';
+@import 'mixin.scss';
+@import 'recomm.scss';
+@import 'agenda.scss';
+@import '_key-caps.scss';
+@import '_about-lesson.scss';
+@import '_lesson-info.scss';
 
 body {
     background-image: url(/assets/lead_bg.svg);
@@ -18,6 +14,7 @@ body {
     background-attachment: fixed;
     font-family: 'Noto Sans TC', 'Roboto', "微軟正黑體", sans-serif;
     //原網站的字型設定，前兩者皆為 Google Font 資源所有。
+    color: $black;
 }
 
 nav {
@@ -53,100 +50,34 @@ nav {
         font-weight: 500;
     }
 
-    li:nth-last-child(2) {
-        padding: 0 1rem;
-        background-color: #fff109;
+    //立即報名
+    li:nth-last-child(2) >a {
+        display: block;
+        padding: 0.25rem 1rem;
+        background-color: $gold;
         font-weight: 800; //彌補視覺差
-        color: black;
         border-radius: 99rem;
+
+        &,
+        &:visited {
+            text-decoration: none;
+            color: black;
+        }
+
+        &:hover,
+        &:active {
+            background-color: #25D0FF;
+            color: #fff;
+        }
     }
 }
 
 header {
-
     display: flex;
     align-items: center;
     flex-flow: column;
 
     img {
         width: 1110px;
-    }
-}
-
-//=========== PART 2
-
-.recomm {
-    &>div:first-child {
-        background-color: #00df008a;
-        padding: 2rem 0;
-
-        &>* {
-            min-width: 930px;
-            text-align: center;
-        }
-
-        h2 {
-            line-height: 3rem;
-        }
-
-        p {
-            font-weight: 600;
-        }
-    }
-
-    .feedback {
-        padding: 3rem 0;
-        background-image: linear-gradient(rgba(white, 0.8), rgba(white, 0.8)), url(/assets/recomm_img2.jpg);
-        background-size: cover;
-        background-position: -200px 0;
-
-        @include center;
-        flex-flow: column;
-
-        h2 {
-            margin-bottom: 3rem;
-            font-size: 2rem;
-        }
-
-        .recomm-carousel-cards {
-            $unit: 1.25rem;
-
-            p {
-                font-size: $unit;
-                text-align: center;
-            }
-
-            span {
-                display: block;
-                font-size: 0.8rem;
-                line-height: 2rem;
-                font-weight: 500;
-                text-align: center;
-            }
-        }
-    }
-
-    &>div:last-child {
-        background-color: #000000ba;
-        color: #fff;
-        @include center;
-        padding: 2rem 0;
-
-        h2 {
-            margin-right: 1rem;
-
-            br {
-                @media screen and (min-width: 1201px) or (max-width: 767px) {
-                    display: none;
-                }
-            }
-        }
-        .recomm-cards {
-            margin-left: 3rem;
-
-            h3 {
-                color: #ea5f36;
-            }
-        }
     }
 }
