--- a/style.css
+++ b/style.css
@@ -1,63 +1,34 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  background-image: url(/assets/lead_bg.svg);
-  background-size: cover;
-  background-attachment: fixed;
-  font-family: "Noto Sans TC", "Roboto", "微軟正黑體", sans-serif;
+.section-header {
+  margin: 2rem 0;
+  color: #3f4145;
 }
-
-nav {
-  margin-bottom: 8rem;
-  padding: 0 10%;
-  min-height: 70px;
-  background-color: #2b2b2b;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
+.section-header h2 {
+  font-size: 2.25rem;
 }
-nav > a > img {
-  max-width: 300px;
-}
-
-.nav-box {
-  display: flex;
-  color: white;
-}
-.nav-box li {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 1rem;
-  max-height: 2rem;
-  max-width: 6rem;
-  list-style: none;
-  cursor: pointer;
+.section-header h3 {
+  font-size: 1.5rem;
   font-weight: 500;
 }
-.nav-box li:nth-last-child(2) {
-  padding: 0 1rem;
-  background-color: #fff109;
-  font-weight: 800;
-  color: black;
-  border-radius: 99rem;
-}
 
-header {
-  display: flex;
-  align-items: center;
-  flex-flow: column;
+.section-header {
+  margin: 2rem 0;
+  color: #3f4145;
 }
-header img {
-  width: 1110px;
+.section-header h2 {
+  font-size: 2.25rem;
+}
+.section-header h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 .recomm > div:first-child {
@@ -110,7 +81,7 @@ header img {
 .recomm > div:last-child h2 {
   margin-right: 1rem;
 }
-@media screen and (min-width: 1201px) and (min-width: 1201px) {
+@media screen and (max-width: 1200px) and (min-width: 768px) {
   .recomm > div:last-child h2 br {
     display: none;
   }
@@ -120,4 +91,331 @@ header img {
 }
 .recomm > div:last-child .recomm-cards h3 {
   color: #ea5f36;
+}
+
+.section-header {
+  margin: 2rem 0;
+  color: #3f4145;
+}
+.section-header h2 {
+  font-size: 2.25rem;
+}
+.section-header h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.agenda > article {
+  margin: 0 auto;
+  width: 1110px;
+}
+
+.agd-btn-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.agd-btn-box a {
+  display: block;
+  padding: 1rem 0;
+  width: 50%;
+  text-align: center;
+  border-radius: 5px 5px 0 0;
+}
+.agd-btn-box a:first-child {
+  background-color: #26a32f;
+  color: #fff;
+}
+.agd-btn-box a:last-child {
+  background-color: #565656;
+  color: #b3b3b3;
+}
+.agd-btn-box a p {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+.agd-btn-box a span {
+  font-family: "Oswald", sans-serif;
+}
+.agd-btn-box h2 {
+  font-size: 1.75rem;
+  font-weight: 600;
+}
+
+.agd-highlight {
+  padding: 1rem 0;
+  background-color: #26a32f;
+}
+.agd-highlight p {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #fff;
+}
+
+.agd-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem 0;
+  background-color: #efefef;
+  border: 2px solid #26a32f;
+  border-radius: 0 0 5px 5px;
+}
+.agd-content .agd-content-box {
+  font-weight: 500;
+}
+.agd-content .agd-content-box figcaption {
+  font-size: 1.5rem;
+  line-height: 3rem;
+  color: #26a32f;
+}
+.agd-content .agd-content-box ul {
+  margin-left: 3rem;
+}
+.agd-content .agd-content-box li {
+  font-size: 1.2rem;
+  line-height: 2.4rem;
+}
+.agd-content .agd-content-img {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.agd-content .agd-content-img img {
+  width: 70%;
+}
+
+.section-header {
+  margin: 2rem 0;
+  color: #3f4145;
+}
+.section-header h2 {
+  font-size: 2.25rem;
+}
+.section-header h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.key-caps {
+  padding: 4rem 0;
+  background-color: #4f4f51;
+  text-align: center;
+  color: #fff;
+}
+.key-caps h2 {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+}
+.key-caps .key-caps-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+}
+.key-caps .key-caps-cards {
+  margin: 0 2.5rem;
+}
+.key-caps .key-caps-cards img {
+  width: 200px;
+}
+.key-caps .key-caps-cards h3 {
+  font-size: 1.375rem;
+  line-height: 3rem;
+}
+
+.section-header {
+  margin: 2rem 0;
+  color: #3f4145;
+}
+.section-header h2 {
+  font-size: 2.25rem;
+}
+.section-header h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.about-lesson article:first-child::before {
+  display: block;
+  content: "";
+}
+.about-lesson article:first-child h2 {
+  margin: 2rem 0 3rem 0;
+  font-size: 2.25rem;
+  text-align: center;
+}
+.about-lesson article:first-child iframe {
+  margin: 0 auto;
+  display: block;
+  width: 1110px;
+  aspect-ratio: 16/9;
+}
+.about-lesson article:last-child {
+  margin-top: 5rem;
+  padding-bottom: 2rem;
+  background-color: #efefef;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+}
+.about-lesson article:last-child img {
+  display: block;
+  width: 1110px;
+}
+
+.section-header {
+  margin: 2rem 0;
+  color: #3f4145;
+}
+.section-header h2 {
+  font-size: 2.25rem;
+}
+.section-header h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.lesson-info {
+  padding: 1rem;
+}
+.lesson-info, .lesson-info > .section-header {
+  background-color: #000;
+  color: #fff;
+}
+
+.lesson-info-box {
+  margin: 0 auto;
+  width: 1110px;
+}
+.lesson-info-box > p {
+  font-size: 1.5rem;
+  font-weight: 500;
+  font-family: Oswald, "Noto Sans TC", serif;
+}
+
+.lesson-price-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1110px;
+  justify-content: space-between;
+}
+
+.lesson-price-cards {
+  padding: 1rem 0;
+  width: 23%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  background-color: #26a32f;
+  border-radius: 5px;
+}
+.lesson-price-cards:first-child {
+  background-color: #ea5f36;
+}
+.lesson-price-cards strong {
+  font-family: Oswald, "Noto Sans TC", serif;
+  font-size: 2.125rem;
+  font-weight: 500;
+}
+
+.lesson-price-ps {
+  margin: 2rem 0;
+  padding: 2rem;
+  background-color: #7b7b7b;
+  border: 1px solid #fff;
+  letter-spacing: 1px;
+  line-height: 2rem;
+}
+
+.lesson-btn-box {
+  margin: 3rem auto 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.lesson-btn-box > a {
+  display: block;
+  padding: 0.8rem 3.5rem;
+  background-color: #fff109;
+  border-radius: 99rem;
+  font-weight: 800;
+  font-size: 1.25rem;
+}
+.lesson-btn-box > a, .lesson-btn-box > a:visited {
+  text-decoration: none;
+  color: black;
+}
+.lesson-btn-box > a:hover, .lesson-btn-box > a:active {
+  background-color: #25D0FF;
+  color: #fff;
+}
+
+body {
+  background-image: url(/assets/lead_bg.svg);
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: "Noto Sans TC", "Roboto", "微軟正黑體", sans-serif;
+  color: #232323;
+}
+
+nav {
+  margin-bottom: 8rem;
+  padding: 0 10%;
+  min-height: 70px;
+  background-color: #2b2b2b;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+}
+nav > a > img {
+  max-width: 300px;
+}
+
+.nav-box {
+  display: flex;
+  color: white;
+}
+.nav-box li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 1rem;
+  max-height: 2rem;
+  max-width: 6rem;
+  list-style: none;
+  cursor: pointer;
+  font-weight: 500;
+}
+.nav-box li:nth-last-child(2) > a {
+  display: block;
+  padding: 0.25rem 1rem;
+  background-color: #fff109;
+  font-weight: 800;
+  border-radius: 99rem;
+}
+.nav-box li:nth-last-child(2) > a, .nav-box li:nth-last-child(2) > a:visited {
+  text-decoration: none;
+  color: black;
+}
+.nav-box li:nth-last-child(2) > a:hover, .nav-box li:nth-last-child(2) > a:active {
+  background-color: #25D0FF;
+  color: #fff;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+}
+header img {
+  width: 1110px;
 }
