--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
   box-sizing: border-box;
 }
 
+a,
+a:visited {
+  text-decoration: none;
+}
+
 .section-header {
   margin: 2rem 0;
   color: #3f4145;
@@ -363,6 +368,7 @@ body {
   background-attachment: fixed;
   font-family: "Noto Sans TC", "Roboto", "微軟正黑體", sans-serif;
   color: #232323;
+  position: relative;
 }
 
 nav {
@@ -411,6 +417,25 @@ nav > a > img {
   color: #fff;
 }
 
+.to-the-top {
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  background-color: #26a32f;
+  position: sticky;
+  top: 90vh;
+  left: calc(100vw - 65px);
+  cursor: pointer;
+}
+.to-the-top .arrow {
+  margin: 0 auto;
+  width: 30px;
+  height: 30px;
+  border-style: solid;
+  border-width: 15px;
+  border-color: transparent transparent #fff transparent;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -418,4 +443,45 @@ header {
 }
 header img {
   width: 1110px;
+}
+
+.empty {
+  background-color: rgba(239, 239, 239, 0.5);
+  margin: 3rem 0;
+  height: 30vh;
+}
+
+footer {
+  padding: 2rem 0 1rem;
+  background-color: #000;
+  color: #fff;
+}
+footer p {
+  line-height: 2.25rem;
+  text-align: center;
+}
+footer p b {
+  margin: 0 0.5rem;
+}
+footer p a {
+  margin-right: 0.875rem;
+  transition: 0.4s text-shadow;
+}
+footer p a,
+footer p a:visited,
+footer p a:hover,
+footer p a:active {
+  color: #fff;
+}
+footer p a:hover,
+footer p a:active {
+  text-shadow: 1px 1px 1px #fff;
+}
+footer p:first-child {
+  font-size: 1.2rem;
+}
+footer p.copyright {
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  font-weight: 300;
 }
