--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,154 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
+
 @import 'reset.scss';
 @import 'mixin.scss';
+@import 'base.scss';
 @import 'recomm.scss';
 @import 'agenda.scss';
 @import '_key-caps.scss';
 @import '_about-lesson.scss';
 @import '_lesson-info.scss';
-
-body {
-    background-image: url(/assets/lead_bg.svg);
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: 'Noto Sans TC', 'Roboto', "微軟正黑體", sans-serif;
-    //原網站的字型設定，前兩者皆為 Google Font 資源所有。
-    color: $black;
-    position: relative;
-}
-
-nav {
-    margin-bottom: 8rem;
-    padding: 0 10%;
-    min-height: 70px;
-    background-color: #2b2b2b;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    position: sticky;
-    top: 0;
-
-    &>a>img {
-        max-width: 300px;
-    }
-}
-
-.nav-box {
-    display: flex;
-    color: white;
-
-    li {
-        @include center;
-
-        margin-left: 1rem;
-        max-height: 2rem;
-        max-width: 6rem;
-        list-style: none;
-        cursor: pointer;
-        font-weight: 500;
-    }
-
-    //立即報名
-    li:nth-last-child(2)>a {
-        display: block;
-        padding: 0.25rem 1rem;
-        background-color: $gold;
-        font-weight: 800; //彌補視覺差
-        border-radius: 99rem;
-
-        &,
-        &:visited {
-            text-decoration: none;
-            color: black;
-        }
-
-        &:hover,
-        &:active {
-            background-color: #25D0FF;
-            color: #fff;
-        }
-    }
-}
-
-.to-the-top {
-    width: 55px;
-    height: 55px;
-    border-radius: 50%;
-    background-color: $green;
-
-    position: sticky;
-    // position: absolute;
-    top: 90vh;
-    left: calc(100vw - 65px);
-    cursor: pointer;
-
-    .arrow {
-        margin: 0 auto;
-        $unit: 15px;
-        width: 2*$unit;
-        height: 2*$unit;
-        border-style: solid;
-        border-width: $unit;
-        border-color: transparent transparent #fff transparent;
-    }
-}
-
-header {
-    display: flex;
-    align-items: center;
-    flex-flow: column;
-
-    img {
-        width: 1110px;
-    }
-}
-
-.empty {
-    background-color: rgba($ivory, 0.5);
-    margin: 3rem 0;
-    height: 30vh;
-}
-
-footer {
-    padding: 2rem 0 1rem;
-    background-color: #000;
-    color: #fff;
-
-    p {
-        line-height: 2.25rem;
-        text-align: center;
-
-        b {
-            margin: 0 0.5rem;
-        }
-
-        a {
-            margin-right: 0.875rem;
-            transition: .4s text-shadow;
-        }
-
-        a,
-        a:visited,
-        a:hover,
-        a:active {
-            color: #fff;
-        }
-        a:hover,
-        a:active {
-            text-shadow: 1px 1px 1px #fff;
-        }
-    }
-
-    p:first-child {
-        font-size: 1.2rem;
-    }
-
-    p.copyright {
-        font-size: 0.875rem;
-        letter-spacing: 1px;
-        font-weight: 300;
-    }
-}
