--- a/scss/_lesson-info.scss
+++ b/scss/_lesson-info.scss
@@ -23,6 +23,7 @@
 }
 
 .lesson-price-box {
+    margin-top: 1rem;
     @include center;
     width: 1110px;
     justify-content: space-between;
@@ -31,6 +32,7 @@
 .lesson-price-cards {
     padding: 1rem 0;
     width: 23%;
+    max-width: 255px;
     @include center;
     flex-flow: column;
     background-color: $green;
@@ -38,6 +40,11 @@
 
     &:first-child {
         background-color: $orange;
+    }
+
+    &:hover {
+        background-color: $gold;
+        color: $black;
     }
 
     strong {
@@ -77,7 +84,8 @@
         &:hover,
         &:active {
             background-color: #25D0FF;
-            color: #fff;
+            //原版網站所用顏色
+            // color: #fff;
         }
     }
 }
