--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -31,8 +31,8 @@ $gold: #fff109;
     margin: 0 auto;
     padding: 3rem 0;
 
-    @include center;
-    flex-direction: column;
+    // @include center;
+    // flex-direction: column;
 }
 
 .date-eng {
