--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,6 @@
 @import 'recomm.scss';
 @import 'agenda.scss';
 @import '_key-caps.scss';
-@import '_about-lesson.scss';
-@import '_lesson-info.scss';
+@import '_about-course.scss';
+@import '_course-info.scss';
 @import '_annual.scss';
