--- a/scss/_about-course.scss
+++ b/scss/_about-course.scss
@@ -1,6 +1,4 @@
-@import 'mixin';
-
-.about-lesson {
+.about-course {
     article:first-child {
         &::before {
             display: block;
@@ -12,18 +10,18 @@
             font-size: 2.25rem;
             text-align: center;
         }
+
         iframe {
             margin: 0 auto;
             display: block;
-            width: 1110px;
             aspect-ratio: 16/9;
         }
     }
 
     article:last-child {
         margin-top: 5rem;
-    padding-bottom: 2rem;
-    background-color: $ivory;
+        padding-bottom: 2rem;
+        background-color: $ivory;
         @include center;
         flex-flow: column;
 
