--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,4 +1,3 @@
-@import 'mixin';
 body {
     background-image: url(/assets/lead_bg.svg);
     background-size: cover;
@@ -21,6 +20,7 @@ nav {
 
     position: sticky;
     top: 0;
+    z-index: 9;
 
     &>a>img {
         max-width: 300px;
