--- a/style.css
+++ b/style.css
@@ -32,43 +32,9 @@ a, a:visited, a:hover, a:active {
   max-width: 1110px;
   margin: 0 auto;
   padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
 
-.date-eng, .lesson-info-box > p {
-  font-family: Oswald, "Noto Sans TC", serif;
-}
-
-.link-soldout, .annual-btn-row td:first-child > a {
-  cursor: default;
-}
-
-.section-header {
-  margin: 2rem 0;
-  color: #3f4145;
-}
-.section-header h2 {
-  font-size: 2.25rem;
-}
-.section-header h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.container {
-  max-width: 1110px;
-  margin: 0 auto;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.date-eng, .lesson-info-box > p {
+.date-eng, .course-info-box > p {
   font-family: Oswald, "Noto Sans TC", serif;
 }
 
@@ -95,6 +61,7 @@ nav {
   align-items: center;
   position: sticky;
   top: 0;
+  z-index: 9;
 }
 nav > a > img {
   max-width: 300px;
@@ -190,36 +157,6 @@ footer p.copyright {
   font-size: 0.875rem;
   letter-spacing: 1px;
   font-weight: 300;
-}
-
-.section-header {
-  margin: 2rem 0;
-  color: #3f4145;
-}
-.section-header h2 {
-  font-size: 2.25rem;
-}
-.section-header h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.container {
-  max-width: 1110px;
-  margin: 0 auto;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.date-eng, .lesson-info-box > p {
-  font-family: Oswald, "Noto Sans TC", serif;
-}
-
-.link-soldout, .annual-btn-row td:first-child > a {
-  cursor: default;
 }
 
 .recomm > div:first-child {
@@ -329,36 +266,6 @@ footer p.copyright {
   border-bottom: 3px solid rgba(255, 255, 255, 0.6666666667);
 }
 
-.section-header {
-  margin: 2rem 0;
-  color: #3f4145;
-}
-.section-header h2 {
-  font-size: 2.25rem;
-}
-.section-header h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.container {
-  max-width: 1110px;
-  margin: 0 auto;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.date-eng, .lesson-info-box > p {
-  font-family: Oswald, "Noto Sans TC", serif;
-}
-
-.link-soldout, .annual-btn-row td:first-child > a {
-  cursor: default;
-}
-
 .agenda > article {
   margin: 0 auto;
   width: 1110px;
@@ -444,36 +351,6 @@ footer p.copyright {
   width: 90%;
 }
 
-.section-header {
-  margin: 2rem 0;
-  color: #3f4145;
-}
-.section-header h2 {
-  font-size: 2.25rem;
-}
-.section-header h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.container {
-  max-width: 1110px;
-  margin: 0 auto;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.date-eng, .lesson-info-box > p {
-  font-family: Oswald, "Noto Sans TC", serif;
-}
-
-.link-soldout, .annual-btn-row td:first-child > a {
-  cursor: default;
-}
-
 .key-caps {
   padding: 4rem 0;
   background-color: #4f4f51;
@@ -501,52 +378,21 @@ footer p.copyright {
   line-height: 3rem;
 }
 
-.section-header {
-  margin: 2rem 0;
-  color: #3f4145;
-}
-.section-header h2 {
-  font-size: 2.25rem;
-}
-.section-header h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.container {
-  max-width: 1110px;
-  margin: 0 auto;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.date-eng, .lesson-info-box > p {
-  font-family: Oswald, "Noto Sans TC", serif;
-}
-
-.link-soldout, .annual-btn-row td:first-child > a {
-  cursor: default;
-}
-
-.about-lesson article:first-child::before {
+.about-course article:first-child::before {
   display: block;
   content: "";
 }
-.about-lesson article:first-child h2 {
+.about-course article:first-child h2 {
   margin: 2rem 0 3rem 0;
   font-size: 2.25rem;
   text-align: center;
 }
-.about-lesson article:first-child iframe {
+.about-course article:first-child iframe {
   margin: 0 auto;
   display: block;
-  width: 1110px;
   aspect-ratio: 16/9;
 }
-.about-lesson article:last-child {
+.about-course article:last-child {
   margin-top: 5rem;
   padding-bottom: 2rem;
   background-color: #efefef;
@@ -555,59 +401,29 @@ footer p.copyright {
   align-items: center;
   flex-flow: column;
 }
-.about-lesson article:last-child img {
+.about-course article:last-child img {
   display: block;
   width: 1110px;
 }
 
-.section-header {
-  margin: 2rem 0;
-  color: #3f4145;
-}
-.section-header h2 {
-  font-size: 2.25rem;
-}
-.section-header h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.container {
-  max-width: 1110px;
-  margin: 0 auto;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.date-eng, .lesson-info-box > p {
-  font-family: Oswald, "Noto Sans TC", serif;
-}
-
-.link-soldout, .annual-btn-row td:first-child > a {
-  cursor: default;
-}
-
-.lesson-info {
+.course-info {
   padding: 1rem;
 }
-.lesson-info, .lesson-info > .section-header {
+.course-info, .course-info > .section-header {
   background-color: #000;
   color: #fff;
 }
 
-.lesson-info-box {
+.course-info-box {
   margin: 0 auto;
   width: 1110px;
 }
-.lesson-info-box > p {
+.course-info-box > p {
   font-size: 1.5rem;
   font-weight: 500;
 }
 
-.lesson-price-box {
+.course-price-box {
   margin-top: 1rem;
   display: flex;
   justify-content: center;
@@ -616,7 +432,7 @@ footer p.copyright {
   justify-content: space-between;
 }
 
-.lesson-price-cards {
+.course-price-cards {
   padding: 1rem 0;
   width: 23%;
   max-width: 255px;
@@ -627,20 +443,20 @@ footer p.copyright {
   background-color: #26a32f;
   border-radius: 5px;
 }
-.lesson-price-cards:first-child {
+.course-price-cards:first-child {
   background-color: #ea5f36;
 }
-.lesson-price-cards:hover {
+.course-price-cards:hover {
   background-color: #fff109;
   color: #232323;
 }
-.lesson-price-cards strong {
+.course-price-cards strong {
   font-family: Oswald, "Noto Sans TC", serif;
   font-size: 2.125rem;
   font-weight: 500;
 }
 
-.lesson-price-ps {
+.course-price-ps {
   margin: 2rem 0;
   padding: 2rem;
   background-color: #7b7b7b;
@@ -649,13 +465,13 @@ footer p.copyright {
   line-height: 2rem;
 }
 
-.lesson-btn-box {
+.course-btn-box {
   margin: 3rem auto 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.lesson-btn-box > a {
+.course-btn-box > a {
   display: block;
   padding: 0.8rem 3.5rem;
   background-color: #fff109;
@@ -663,42 +479,12 @@ footer p.copyright {
   font-weight: 800;
   font-size: 1.25rem;
 }
-.lesson-btn-box > a, .lesson-btn-box > a:visited {
+.course-btn-box > a, .course-btn-box > a:visited {
   text-decoration: none;
   color: black;
 }
-.lesson-btn-box > a:hover, .lesson-btn-box > a:active {
+.course-btn-box > a:hover, .course-btn-box > a:active {
   background-color: #25D0FF;
-}
-
-.section-header {
-  margin: 2rem 0;
-  color: #3f4145;
-}
-.section-header h2 {
-  font-size: 2.25rem;
-}
-.section-header h3 {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.container {
-  max-width: 1110px;
-  margin: 0 auto;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.date-eng, .lesson-info-box > p {
-  font-family: Oswald, "Noto Sans TC", serif;
-}
-
-.link-soldout, .annual-btn-row td:first-child > a {
-  cursor: default;
 }
 
 .annual {
