進度到延伸閱讀(section.read-more) highlight 的卡片未完成

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,3 +11,5 @@
 @import '_course-info.scss';
 @import '_annual.scss';
 @import '_extra-course.scss';
+@import '_faq.scss';
+@import '_read-more.scss';
