--- a/style.css
+++ b/style.css
@@ -659,3 +659,86 @@ footer p.copyright {
     background-position-x: 100%;
   }
 }
+.faq {
+  background: linear-gradient(to bottom, #fff, #efefef);
+  color: #232323;
+}
+.faq .section-header {
+  color: #232323;
+}
+
+.questions {
+  margin: 2rem 0;
+}
+.questions h3 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.2;
+}
+.questions p {
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 1rem 0;
+}
+.questions > p > a, .questions > p > a:visited {
+  color: #26a32f;
+}
+.questions > p > a:hover, .questions > p > a:active {
+  color: #ea5f36;
+}
+
+.read-more {
+  background-color: #fff;
+}
+
+.read-more-box {
+  margin-bottom: 2rem;
+}
+.read-more-box h3 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+  color: #4f4f51;
+  font-size: 1.75rem;
+  font-weight: 600;
+  line-height: 1.5;
+}
+.read-more-box ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.read-more-box li {
+  list-style-type: none;
+  width: 30%;
+}
+.read-more-box li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.read-more-box figure {
+  width: 100%;
+}
+.read-more-box figure img {
+  display: block;
+  width: 100%;
+  aspect-ratio: 1.9;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border: 1px solid #000;
+  transition: opacity 0.5s ease;
+  position: relative;
+  opacity: 1;
+}
+.read-more-box figure figcaption {
+  font-size: 1.125rem;
+  font-weight: 500;
+  color: #232323;
+}
+.read-more-box figure:hover img {
+  opacity: 0.6;
+}
+
+.read-more-highlight::before {
+  content: "000";
+}
