--- a/scss/_about-course.scss
+++ b/scss/_about-course.scss
@@ -14,6 +14,7 @@
         iframe {
             margin: 0 auto;
             display: block;
+            width: 100%;
             aspect-ratio: 16/9;
         }
     }
