--- a/scss/_read-more.scss
+++ b/scss/_read-more.scss
@@ -59,8 +59,6 @@
         }
     }
 }
-
-.read-more-highlight::before {
-    content: '000';
-    
+.read-more-highlight {
+    // position: relative;
 }
