--- a/style.css
+++ b/style.css
@@ -601,11 +601,15 @@ footer p.copyright {
   font-size: 1.5rem;
   font-weight: 700;
 }
+.extra-course-cards figure figcaption h3::after {
+  content: " ↘";
+  font-size: 0.8rem;
+}
 .extra-course-cards figure figcaption .lightening-line {
-  height: 3px;
+  height: 1px;
   background-image: linear-gradient(90deg, #7b7b7b 35%, green 45%, green 55%, #7b7b7b 65%);
-  background-size: 300% 5px;
-  animation: lightening 3s linear delay iteration-count forwards forwards;
+  background-size: 300% 100%;
+  animation: lightening 1s linear infinite;
   /*
   參考：
   https://codepen.io/P1N2O/pen/pyBNzX?editors=0100
@@ -641,14 +645,29 @@ footer p.copyright {
   color: #000;
   font-weight: 500;
   line-height: 2;
+  animation: color-changing 0.7s ease infinite alternate;
 }
 
 @keyframes lightening {
   from {
-    background-position-x: 0;
+    background-position-x: 100%;
   }
   to {
-    background-position-x: 100%;
+    background-position-x: 0%;
+  }
+}
+@keyframes color-changing {
+  0% {
+    background-color: #26a32f;
+  }
+  10% {
+    background-color: #26a32f;
+  }
+  90% {
+    background-color: #7b7b7b;
+  }
+  100% {
+    background-color: #7b7b7b;
   }
 }
 .faq {
@@ -729,8 +748,4 @@ footer p.copyright {
 }
 .read-more-box figure:hover img {
   opacity: 0.6;
-}
-
-.read-more-highlight::before {
-  content: "000";
 }
