零星樣式修正

--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -35,7 +35,7 @@ $gold: #fff109;
 .date-eng {
     font-family: Oswald, 'Noto Sans TC', serif;
 }
-
+// 時間性人擇樣式
 .link-soldout {
     cursor: default;
 }
