--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,15 +1,11 @@
 body {
-    background-image: url(/assets/lead_bg.svg);
-    background-size: cover;
-    background-attachment: fixed;
+    background: url("../assets/lead_bg.svg") center/cover fixed;
     font-family: 'Noto Sans TC', 'Roboto', "微軟正黑體", sans-serif;
     //原網站的字型設定，前兩者皆為 Google Font 資源所有。
     color: $black;
-    position: relative;
 }
 
 nav {
-    margin-bottom: 8rem;
     padding: 0 10%;
     min-height: 70px;
     background-color: #2b2b2b;
@@ -87,13 +83,13 @@ nav {
     }
 }
 
-header {
+.top-header {
     display: flex;
     align-items: center;
     flex-flow: column;
 
     img {
-        width: 1110px;
+        width: 100%;
     }
 }
 
