--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -1,4 +1,4 @@
-* {
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,5 +10,5 @@ a:visited {
 }
 
 a, a:visited, a:hover, a:active {
-    color: white;
+    color: $black;
 }
