--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
-* {
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,10 +10,6 @@
 a,
 a:visited {
   text-decoration: none;
-}
-
-a, a:visited, a:hover, a:active {
-  color: white;
 }
 
 .section-header {
@@ -43,16 +39,12 @@ a, a:visited, a:hover, a:active {
 }
 
 body {
-  background-image: url(/assets/lead_bg.svg);
-  background-size: cover;
-  background-attachment: fixed;
+  background: url("../assets/lead_bg.svg") center/cover fixed;
   font-family: "Noto Sans TC", "Roboto", "微軟正黑體", sans-serif;
   color: #232323;
-  position: relative;
 }
 
 nav {
-  margin-bottom: 8rem;
   padding: 0 10%;
   min-height: 70px;
   background-color: #2b2b2b;
@@ -115,13 +107,13 @@ nav > a > img {
   border-color: transparent transparent #fff transparent;
 }
 
-header {
+.top-header {
   display: flex;
   align-items: center;
   flex-flow: column;
 }
-header img {
-  width: 1110px;
+.top-header img {
+  width: 100%;
 }
 
 footer {
