--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -29,7 +29,7 @@ $gold: #fff109;
 .container {
     max-width: 1110px;
     margin: 0 auto;
-    padding: 3rem 0;
+    // padding: 3rem 0;
 }
 
 .date-eng {
